@@ -1,41 +1,19 @@
-// Compile: javac launcher.java
-// Run:     java launcher [--debug] [--game-log-output]
+// Compile: javac --module-path ./lib --add-modules javafx.web,javafx.swing -cp . *.java
+// Run:     java --module-path ./lib --add-modules javafx.web,javafx.swing launcher [--debug] [--game-log-output]
 /*
- * BloxBoxLauncher.java — Kid-facing Roblox whitelist launcher (Java Swing port).
+ * launcher.java — BloxBox entry point, shared constants, config I/O, HTTP, and Sober launch logic.
  *
- * Features:
- *   - Shows only parent-approved games as tiles with cover art thumbnails
- *   - Launches directly into the game via roblox:// URI (bypasses Roblox homepage)
- *   - Request button lets the child submit a new game URL for parent review
- *   - Requests are saved to ~/.cache/bloxbox_launcher/requests.json (root-owned, parent reviews it)
+ * All other classes (GameCard, PinDialog, LauncherApp, RequestDialogWebView,
+ * RequestDialogFallback) live in their own .java files and reference the
+ * public static members here directly — no package needed for single-dir builds.
  *
- * Run as the child's user account (no sudo needed to launch).
- * The config and requests files are root-owned so only the parent can modify them.
- *
- * Compile:   javac launcher.java
- * Run:       java launcher [--debug] [--game-log-output]
- * Or single-file (Java 21+): java launcher.java
- *
- * Dependencies (all standard JDK — no extra JARs needed):
- *   javax.swing, java.awt, java.net.http, org.json (bundled via simple parser below)
- *
- * NOTE: For thumbnail display this uses javax.imageio — no Pillow equivalent needed.
- *       For JSON parsing a minimal built-in parser is used to avoid external deps;
- *       swap in org.json or Jackson if you prefer a full JSON library.
+ * Config file:   /etc/bloxbox/roblox_whitelist.json  (root-owned, parent edits)
+ * Requests file: ~/.cache/bloxbox_launcher/requests.json  (child writes, parent reviews)
+ * Thumb cache:   ~/.cache/bloxbox_launcher/thumbnails/<place_id>.png
  */
 
-import java.awt.BorderLayout;
 import java.awt.Color;
-import java.awt.Component;
-import java.awt.Cursor;
-import java.awt.Dimension;
-import java.awt.FlowLayout;
 import java.awt.Font;
-import java.awt.GridLayout;
-import java.awt.Image;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
-import java.awt.image.BufferedImage;
 import java.io.BufferedReader;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
@@ -57,124 +35,180 @@ import java.util.ArrayList;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.concurrent.CompletableFuture;
 import java.util.logging.ConsoleHandler;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-
 import javax.imageio.ImageIO;
-import javax.swing.BorderFactory;
-import javax.swing.Box;
-import javax.swing.BoxLayout;
-import javax.swing.ImageIcon;
-import javax.swing.JButton;
-import javax.swing.JDialog;
 import javax.swing.JFrame;
-import javax.swing.JLabel;
 import javax.swing.JOptionPane;
-import javax.swing.JPanel;
-import javax.swing.JPasswordField;
-import javax.swing.JScrollPane;
-import javax.swing.JTextField;
-import javax.swing.SwingConstants;
 import javax.swing.SwingUtilities;
 import javax.swing.UIManager;
+import java.awt.image.BufferedImage;
 
 public class launcher {
 
-    // ── Logging ───────────────────────────────────────────────────────────────
-    private static final Logger LOG = Logger.getLogger("bloxbox");
+    // ── Logging — shared across all files ────────────────────────────────────
+    public static final Logger LOG = Logger.getLogger("bloxbox");
 
-    // ── CLI flags ─────────────────────────────────────────────────────────────
-    // Mirrors Python argparse: --debug and --game-log-output
-    private static boolean DEBUG_MODE       = false;
-    private static boolean GAME_LOG_OUTPUT  = false;
+    // ── CLI flags — set in main(), read everywhere ────────────────────────────
+    public static boolean DEBUG_MODE      = false;
+    public static boolean GAME_LOG_OUTPUT = false;
 
-    // ── System config paths — root-owned, child cannot modify ─────────────────
-    // These mirror /etc/bloxbox/config.py values — update to match your install
-    private static final String CONFIG_PATH    = "/etc/bloxbox/roblox_whitelist.json";
-    private static final String REQUESTS_PATH  = System.getProperty("user.home") + ".cache/bloxbox_launcher/requests.json";
-    private static final Path   CACHE_DIR      = Path.of(System.getProperty("user.home"), ".cache", "bloxbox_launcher", "thumbnails");
-    private static final String WINDOW_TITLE   = "BloxBox Game Launcher";
+    // ── System config paths — root-owned on Linux, user-local on Windows/macOS ─
+    // Windows: config lives next to the jar; Linux: /etc/bloxbox/
+    private static final boolean IS_WINDOWS = System.getProperty("os.name").toLowerCase().contains("win");
+    private static final boolean IS_MAC     = System.getProperty("os.name").toLowerCase().contains("mac");
 
-    // PIN lock — set LOCK_REQUEST_GAMES=true and provide SHA-256 hash of the PIN
-    // Generate hash: echo -n "yourpin" | sha256sum
-    private static final boolean LOCK_REQUEST_GAMES        = true;
-    private static final String  LOCK_REQUEST_PIN_PASS_HASH = "d74ff0ee8da3b9806b18c877dbf29bbde50b5bd8e4dad7a3a725000feb82e8f1"; // Set your hash here
+    public static final String CONFIG_PATH =
+        IS_WINDOWS ? "config/roblox_whitelist.json" :
+        IS_MAC     ? System.getProperty("user.home") + "/Library/Application Support/bloxbox/roblox_whitelist.json" :
+                     "/etc/bloxbox/roblox_whitelist.json";
 
-    // Roblox browse URL — shown in the fallback request dialog browser
-    private static final String ROBLOX_GAME_SEARCH_URL =
+    // Requests file lives in the user's home cache on all platforms
+    public static final String REQUESTS_PATH =
+        System.getProperty("user.home") + (IS_WINDOWS ? "\\.cache\\bloxbox_launcher\\requests.json"
+                                                       : "/.cache/bloxbox_launcher/requests.json");
+
+    // Thumbnail disk cache — platform path separator handled by Path.of()
+    public static final Path CACHE_DIR =
+        Path.of(System.getProperty("user.home"), ".cache", "bloxbox_launcher", "thumbnails");
+
+    // ── Window / app identity ─────────────────────────────────────────────────
+    public static final String WINDOW_TITLE = "BloxBox";
+
+    // ── PIN lock for the Request-a-Game flow ──────────────────────────────────
+    // Set LOCK_REQUEST_GAMES = true and paste the SHA-256 hash of your chosen PIN.
+    // Generate hash (Linux/macOS): echo -n "yourpin" | sha256sum
+    // Generate hash (Windows PS):  (Get-FileHash -InputStream ([IO.MemoryStream]::new([Text.Encoding]::UTF8.GetBytes("yourpin"))) -Algorithm SHA256).Hash.ToLower()
+    public static final boolean LOCK_REQUEST_GAMES         = true;
+    public static final String  LOCK_REQUEST_PIN_PASS_HASH = "d74ff0ee8da3b9806b18c877dbf29bbde50b5bd8e4dad7a3a725000feb82e8f1";
+
+    // ── PIN lock for the parent Approval flow (separate from request PIN) ─────
+    public static final boolean GAME_APPROVAL_NEEDED      = true;
+    public static final boolean LOCK_APPROVAL_PIN         = true;
+    public static final String  LOCK_APPROVAL_PIN_PASS_HASH = "d74ff0ee8da3b9806b18c877dbf29bbde50b5bd8e4dad7a3a725000feb82e8f1";
+
+    // ── Game category constants ───────────────────────────────────────────────
+    // These are the recognised category labels that map to sidebar entries.
+    // The emoji prefix in the JSON value is extracted automatically for the sidebar icon.
+    // Any game whose "category" field is missing or unrecognised goes into UNSORTED.
+    public static final String[] GAME_CATEGORIES = {
+        "🎭 Role Playing",
+        "🏎️ Racing",
+        "👨‍👩‍👧 Family",
+        "📚 Education",
+        "🌍 World Exploring",
+        "Sports"
+    };
+    public static final String GAME_UNSORTED_CATEGORY = "🔧 Unsorted";
+
+    // ── Roblox browse URL — used by both WebView and fallback dialogs ─────────
+    public static final String ROBLOX_GAME_SEARCH_URL =
         "https://www.roblox.com/charts?device=computer&country=us";
 
-    // ── Roblox API ────────────────────────────────────────────────────────────
-    // Direct thumbnail endpoint — takes place ID, no universe ID lookup needed
-    private static final String THUMBNAIL_API =
+    // ── Roblox thumbnail API — place ID → PNG URL, no universe lookup needed ──
+    public static final String THUMBNAIL_API =
         "https://thumbnails.roblox.com/v1/places/gameicons?placeIds=%s&size=256x256&format=Png";
 
-    // ── Visual settings ───────────────────────────────────────────────────────
-    private static final Color BG_COLOR      = Color.decode("#0f0f1a");  // Dark navy background
-    private static final Color CARD_COLOR    = Color.decode("#1a1a2e");  // Slightly lighter card background
-    private static final Color ACCENT_COLOR  = Color.decode("#e94560");  // Red accent (play button)
-    private static final Color REQUEST_COLOR = Color.decode("#2a6496");  // Blue (request a game button)
-    private static final Color TEXT_COLOR    = Color.decode("#eaeaea");  // Light text
-    private static final Color SUBTEXT_COLOR = Color.decode("#888888");  // Muted subtext
-    private static final Color HOVER_COLOR   = Color.decode("#252540");  // Card hover highlight
+    // ── Visual palette — shared across all UI files ───────────────────────────
+    public static final Color BG_COLOR       = Color.decode("#0f0f1a"); // Dark navy background
+    public static final Color CARD_COLOR     = Color.decode("#1a1a2e"); // Slightly lighter card background
+    public static final Color ACCENT_COLOR   = Color.decode("#e94560"); // Red accent (play button)
+    public static final Color REQUEST_COLOR  = Color.decode("#2a6496"); // Blue (request a game button)
+    public static final Color TEXT_COLOR     = Color.decode("#eaeaea"); // Light text
+    public static final Color SUBTEXT_COLOR  = Color.decode("#888888"); // Muted subtext
+    public static final Color HOVER_COLOR    = Color.decode("#252540"); // Card hover highlight
+    public static final Color SIDEBAR_COLOR  = Color.decode("#13132a"); // Sidebar background (slightly darker than BG)
+    public static final Color SIDEBAR_SEL    = Color.decode("#2a2a4a"); // Selected sidebar item highlight
 
-    private static final Font FONT_TITLE = new Font("Georgia",   Font.BOLD,  28);
-    private static final Font FONT_CARD  = new Font("Georgia",   Font.BOLD,  12);
-    private static final Font FONT_SMALL = new Font("Monospaced", Font.PLAIN, 10);
-    private static final Font FONT_BTN   = new Font("Georgia",   Font.BOLD,  10);
+    // ── Shared fonts ──────────────────────────────────────────────────────────
+    public static final Font FONT_TITLE = new Font("Georgia",    Font.BOLD,  28);
+    public static final Font FONT_CARD  = new Font("Georgia",    Font.BOLD,  12);
+    public static final Font FONT_SMALL = new Font("Monospaced", Font.PLAIN, 10);
+    public static final Font FONT_BTN   = new Font("Georgia",    Font.BOLD,  10);
 
-    // Card dimensions — tall enough for thumbnail + name + play button
-    private static final int CARD_WIDTH  = 200;
-    private static final int CARD_HEIGHT = 300;
-    private static final int THUMB_SIZE  = 160;   // Thumbnail display size in pixels
-    private static final int COLS        = 4;     // Game cards per row
+    // ── Game name font ────────────────────────────────────────────────────────
+    // Dialog logical font — Java maps this to a system font chain.
+    // Emoji rendering is handled separately by EmojiLabel which paints
+    // emoji codepoints using a directly loaded color emoji font.
+    public static final Font FONT_NAME  = new Font("Dialog", Font.BOLD, 12);
 
-    // ── Shared HTTP client — reused for all Roblox API calls ─────────────────
-    private static final HttpClient HTTP = HttpClient.newBuilder()
+    // ── Emoji font — loaded once, shared by all EmojiLabel instances ──────────
+
+    // ── Card / grid layout constants ──────────────────────────────────────────
+    public static final int CARD_WIDTH  = 200; // Fixed card width in pixels
+    public static final int CARD_HEIGHT = 300; // Fixed card height in pixels
+    public static final int THUMB_SIZE  = 160; // Thumbnail display size in pixels
+    public static final int COLS        = 4;   // Game cards per row
+
+    // ── Sidebar animation constants ───────────────────────────────────────────
+    public static final int SIDEBAR_COLLAPSED_W = 52;  // Icon-only width (px)
+    public static final int SIDEBAR_EXPANDED_W  = 200; // Expanded with label (px)
+    public static final int SIDEBAR_ANIM_STEP   = 12;  // Pixels per timer tick
+    public static final int SIDEBAR_ANIM_MS     = 16;  // Timer interval (~60 fps)
+
+    // ── Shared HTTP client — reused across all API calls ─────────────────────
+    // Single instance, thread-safe, persistent connection pool
+    public static final HttpClient HTTP = HttpClient.newBuilder()
         .connectTimeout(Duration.ofSeconds(8))
         .followRedirects(HttpClient.Redirect.NORMAL)
         .build();
 
     // ── Entry point ───────────────────────────────────────────────────────────
     public static void main(String[] args) {
-        // Parse CLI flags — mirrors Python argparse
+        // Parse CLI flags — mirrors Python argparse behaviour
         for (String arg : args) {
             if (arg.equals("--debug")           || arg.equals("-d")) DEBUG_MODE      = true;
             if (arg.equals("--game-log-output") || arg.equals("-l")) GAME_LOG_OUTPUT = true;
         }
 
-        // Configure logging level based on --debug flag
+        // Configure Java logging level from --debug flag
         LOG.setLevel(DEBUG_MODE ? Level.ALL : Level.INFO);
         ConsoleHandler ch = new ConsoleHandler();
         ch.setLevel(DEBUG_MODE ? Level.ALL : Level.INFO);
         LOG.addHandler(ch);
         LOG.setUseParentHandlers(false);
 
-        // Warn early if config file is missing — parallel to Python FileNotFoundError
+        // Warn early if the whitelist config is missing — nothing to show without it
         if (!Files.exists(Path.of(CONFIG_PATH))) {
             LOG.severe("[bloxbox] System config not found at " + CONFIG_PATH);
             JOptionPane.showMessageDialog(null,
-                "System config not found at:\n" + CONFIG_PATH +
+                "Game config not found at:\n" + CONFIG_PATH +
                 "\n\nAsk a parent to set up BloxBox.",
                 "Config Missing", JOptionPane.ERROR_MESSAGE);
             System.exit(1);
         }
 
-        // Create cache directory on first run — equivalent to CACHE_DIR.mkdir(parents=True)
+        // Create thumbnail cache directory on first run — safe no-op if already exists
         try { Files.createDirectories(CACHE_DIR); }
         catch (IOException e) { LOG.warning("[bloxbox] Could not create cache dir: " + e.getMessage()); }
 
-        // Launch Swing UI on the Event Dispatch Thread (EDT) — Swing is not thread-safe
+        // Create requests file parent directory if it doesn't exist yet
+        try { Files.createDirectories(Path.of(REQUESTS_PATH).getParent()); }
+        catch (IOException e) { LOG.warning("[bloxbox] Could not create requests dir: " + e.getMessage()); }
+
+        // JavaFX must be initialised on the JavaFX Application Thread before any
+        // WebView is created. Calling Platform.startup() here ensures that even
+        // though we drive the main window from Swing's EDT, the FX toolkit is
+        // ready when RequestDialogWebView needs it.
+        try {
+            javafx.application.Platform.startup(() -> {
+                LOG.fine("[bloxbox] JavaFX platform started");
+            });
+        } catch (IllegalStateException e) {
+            // Already running — harmless if FX was started elsewhere
+            LOG.fine("[bloxbox] JavaFX already started: " + e.getMessage());
+        }
+
+        // Launch the Swing UI on the Event Dispatch Thread — Swing is not thread-safe
         SwingUtilities.invokeLater(() -> {
             try { UIManager.setLookAndFeel(UIManager.getSystemLookAndFeelClassName()); }
-            catch (Exception ignored) {} // Fall back to default Metal L&F
+            catch (Exception ignored) {} // Fall back to Metal L&F if system L&F unavailable
 
             LauncherApp app = new LauncherApp();
-            app.setSize(940, 680);
+            app.setSize(1100, 720); // Wider to accommodate sidebar + game grid
             app.setLocationRelativeTo(null); // Centre on screen
             app.setVisible(true);
         });
@@ -186,10 +220,10 @@ public class launcher {
 
     /**
      * Load the approved games list from the root-owned config file.
-     * Config format (JSON): {"games": [{"name": "...", "place_id": "...", "description": "..."}, ...]}
-     * Returns a list of game maps. Returns empty list on error (never null).
+     * Format: {"games": [{"name":"...","place_id":"...","category":"...","description":"...","url":"..."}, ...]}
+     * Returns an empty list on any error — never null.
      */
-    static List<Map<String, String>> loadConfig() {
+    public static List<Map<String, String>> loadConfig() {
         Path p = Path.of(CONFIG_PATH);
         if (!Files.exists(p)) return List.of();
         try {
@@ -202,11 +236,10 @@ public class launcher {
     }
 
     /**
-     * Load pending game requests from the requests file.
-     * File: /etc/bloxbox/requests.json  (written as the child's user, readable by parent)
-     * Returns list of request maps: [{place_id, game_name, url, note, timestamp}, ...]
+     * Load pending game requests from the child-writable requests file.
+     * Returns a mutable list — safe to append to and write back.
      */
-    static List<Map<String, String>> loadRequests() {
+    public static List<Map<String, String>> loadRequests() {
         Path p = Path.of(REQUESTS_PATH);
         if (!Files.exists(p)) return new ArrayList<>();
         try {
@@ -219,19 +252,16 @@ public class launcher {
     }
 
     /**
-     * Append a new game request to the requests JSON file.
-     * Equivalent to Python's save_request() — reads, appends, writes atomically-ish.
-     * Returns true on success, false on permission/IO error.
+     * Append a new game request entry and write the file back.
+     * Safe to call from any thread — file I/O is the only side effect.
+     * Returns true on success, false on any I/O or permission error.
      */
-    static boolean saveRequest(String placeId, String gameName, String note, String url) {
-        LOG.fine("[bloxbox] save_request called: " + placeId + " / " + gameName);
-        LOG.fine("[bloxbox] REQUESTS_PATH: " + REQUESTS_PATH);
-        LOG.fine("[bloxbox] File exists: " + Files.exists(Path.of(REQUESTS_PATH)));
+    public static boolean saveRequest(String placeId, String gameName, String note, String url) {
+        LOG.fine("[bloxbox] save_request: " + placeId + " / " + gameName);
 
         List<Map<String, String>> requests = new ArrayList<>(loadRequests());
-        LOG.fine("[bloxbox] Existing requests: " + requests.size());
 
-        // Build the new request entry
+        // Build the timestamped request entry
         Map<String, String> entry = new LinkedHashMap<>();
         entry.put("place_id",  placeId.strip());
         entry.put("game_name", gameName.strip());
@@ -240,10 +270,10 @@ public class launcher {
         entry.put("timestamp", LocalDateTime.now().format(DateTimeFormatter.ISO_LOCAL_DATE_TIME));
         requests.add(entry);
 
-        // Serialize and write — simple JSON builder (no external dep)
         try {
             String json = buildRequestsJson(requests);
-            Files.writeString(Path.of(REQUESTS_PATH), json, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+            Files.writeString(Path.of(REQUESTS_PATH), json,
+                StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
             LOG.fine("[bloxbox] Request saved → " + REQUESTS_PATH);
             return true;
         } catch (Exception e) {
@@ -253,12 +283,12 @@ public class launcher {
     }
 
     /**
-     * Verify input PIN against the stored SHA-256 hash.
-     * If LOCK_REQUEST_GAMES is false, always returns true (PIN check disabled).
-     * Mirrors Python verify_pin() — hash generated by: echo -n "pin" | sha256sum
+     * Verify a PIN string against the stored SHA-256 hash.
+     * Returns true immediately if LOCK_REQUEST_GAMES is false.
+     * Hash format matches `echo -n "pin" | sha256sum` output.
      */
-    static boolean verifyPin(String inputPin) {
-        if (!LOCK_REQUEST_GAMES) return true; // PIN lock disabled in config
+    public static boolean verifyPin(String inputPin) {
+        if (!LOCK_REQUEST_GAMES) return true; // PIN check disabled
         try {
             MessageDigest md  = MessageDigest.getInstance("SHA-256");
             byte[]        dig = md.digest(inputPin.getBytes(StandardCharsets.UTF_8));
@@ -266,20 +296,24 @@ public class launcher {
             for (byte b : dig) sb.append(String.format("%02x", b));
             return sb.toString().equals(LOCK_REQUEST_PIN_PASS_HASH);
         } catch (NoSuchAlgorithmException e) {
-            LOG.severe("[bloxbox] SHA-256 not available: " + e.getMessage());
+            LOG.severe("[bloxbox] SHA-256 unavailable: " + e.getMessage());
             return false;
         }
     }
 
     /**
-     * Kill any running Sober process — mirrors Python terminateSober().
-     * Uses pkill on Linux. Safe to call even if Sober isn't running.
+     * Kill any running Sober (org.vinegarhq.Sober) process.
+     * Uses pkill on Linux/macOS, taskkill on Windows.
+     * Safe to call even when Sober is not running.
      */
-    static void terminateSober() {
+    public static void terminateSober() {
         try {
-            Process result = Runtime.getRuntime().exec(new String[]{"pkill", "sober"});
+            String[] cmd = IS_WINDOWS
+                ? new String[]{"taskkill", "/F", "/IM", "sober.exe"}
+                : new String[]{"pkill", "sober"};
+            Process result = Runtime.getRuntime().exec(cmd);
             int code = result.waitFor();
-            LOG.info("[bloxbox] pkill exit code: " + code);
+            LOG.info("[bloxbox] terminate sober exit code: " + code);
         } catch (Exception e) {
             LOG.warning("[bloxbox] terminateSober failed: " + e.getMessage());
         }
@@ -290,33 +324,33 @@ public class launcher {
     // ══════════════════════════════════════════════════════════════════════════
 
     /**
-     * Fetch the thumbnail image URL from the Roblox gameicons endpoint.
-     * No universe ID lookup needed — place ID is sufficient.
-     * Returns the CDN image URL string, or null on failure.
+     * Resolve the CDN image URL for a given Roblox place ID.
+     * Uses the direct gameicons endpoint — no universe ID lookup required.
+     * Returns the URL string or null on any failure.
      */
-    static String fetchThumbnailUrl(String placeId) {
+    public static String fetchThumbnailUrl(String placeId) {
         String url = String.format(THUMBNAIL_API, placeId);
         try {
-            HttpRequest  req  = HttpRequest.newBuilder(URI.create(url)).GET().build();
+            HttpRequest req = HttpRequest.newBuilder(URI.create(url)).GET().build();
             HttpResponse<String> resp = HTTP.send(req, HttpResponse.BodyHandlers.ofString());
-            // Parse: {"data":[{"imageUrl":"https://..."}]}
+            // Minimal parse of {"data":[{"imageUrl":"https://..."}]}
             String body = resp.body();
-            int    idx  = body.indexOf("\"imageUrl\"");
+            int idx = body.indexOf("\"imageUrl\"");
             if (idx < 0) return null;
             int s = body.indexOf('"', idx + 10) + 1;
             int e = body.indexOf('"', s);
             return body.substring(s, e);
         } catch (Exception e) {
-            LOG.severe("[launcher] Thumbnail URL fetch failed for place " + placeId + ": " + e.getMessage());
+            LOG.severe("[launcher] Thumbnail URL fetch failed for " + placeId + ": " + e.getMessage());
             return null;
         }
     }
 
     /**
-     * Fetch the game name from Roblox using the economy assets API.
-     * Returns the game name string, or null on failure.
+     * Fetch the display name of a Roblox game via the economy assets API.
+     * Returns the name string or null on failure.
      */
-    static String fetchGameName(String placeId) {
+    public static String fetchGameName(String placeId) {
         String url = "https://economy.roblox.com/v2/assets/" + placeId + "/details";
         try {
             HttpRequest req = HttpRequest.newBuilder(URI.create(url))
@@ -324,7 +358,7 @@ public class launcher {
                 .GET().build();
             HttpResponse<String> resp = HTTP.send(req, HttpResponse.BodyHandlers.ofString());
             String body = resp.body();
-            // Parse: {"Name":"..."}
+            // Minimal parse of {"Name":"..."}
             int idx = body.indexOf("\"Name\"");
             if (idx < 0) return null;
             int s = body.indexOf('"', idx + 6) + 1;
@@ -337,44 +371,40 @@ public class launcher {
     }
 
     /**
-     * Full pipeline: place ID → thumbnail URL → BufferedImage.
+     * Full pipeline: place ID → CDN URL → disk-cached BufferedImage.
      *
-     * Uses a disk cache to avoid re-fetching on every app launch.
-     * Cache lives at: ~/.cache/bloxbox_launcher/thumbnails/<place_id>.png
-     *
-     * Returns a BufferedImage, or null if anything fails.
-     * Mirrors Python fetch_thumbnail_image() — no Pillow needed, uses javax.imageio.
+     * Cache path: ~/.cache/bloxbox_launcher/thumbnails/<place_id>.png
+     * On cache hit:  read from disk (fast, no network).
+     * On cache miss: download PNG, write to disk, return image.
+     * Returns null if any step fails — callers show an emoji placeholder.
      */
-    static BufferedImage fetchThumbnailImage(String placeId) {
-        // ── Check disk cache first to avoid unnecessary API calls ────────────
+    public static BufferedImage fetchThumbnailImage(String placeId) {
+        // ── Cache hit — skip all network calls ───────────────────────────────
         Path cacheFile = CACHE_DIR.resolve(placeId + ".png");
-
         if (Files.exists(cacheFile)) {
             try {
                 return ImageIO.read(cacheFile.toFile());
             } catch (Exception e) {
-                LOG.severe("[launcher] Cache read failed for " + placeId + ": " + e.getMessage());
-                try { Files.deleteIfExists(cacheFile); } catch (IOException ignored) {} // Purge corrupt cache file
+                LOG.warning("[launcher] Corrupt cache for " + placeId + " — purging");
+                try { Files.deleteIfExists(cacheFile); } catch (IOException ignored) {}
             }
         }
 
-        // ── Cache miss — fetch directly using place ID ────────────────────────
+        // ── Cache miss — fetch URL then download bytes ────────────────────────
         String thumbUrl = fetchThumbnailUrl(placeId);
         if (thumbUrl == null) return null;
 
         try {
-            // Download the raw PNG bytes
             HttpRequest req = HttpRequest.newBuilder(URI.create(thumbUrl))
                 .timeout(Duration.ofSeconds(8)).GET().build();
-            HttpResponse<byte[]> resp = HTTP.send(req, HttpResponse.BodyHandlers.ofByteArray());
-            byte[] imgData = resp.body();
+            byte[] imgData = HTTP.send(req, HttpResponse.BodyHandlers.ofByteArray()).body();
 
-            // Write to cache for next time
+            // Persist to disk so the next launch is instant
             Files.write(cacheFile, imgData);
 
             return ImageIO.read(new ByteArrayInputStream(imgData));
         } catch (Exception e) {
-            LOG.severe("[launcher] Thumbnail download failed for place " + placeId + ": " + e.getMessage());
+            LOG.severe("[launcher] Thumbnail download failed for " + placeId + ": " + e.getMessage());
             return null;
         }
     }
@@ -384,99 +414,96 @@ public class launcher {
     // ══════════════════════════════════════════════════════════════════════════
 
     /**
-     * Launch a Roblox game directly, bypassing the Roblox homepage entirely.
+     * Launch a Roblox game directly via the roblox:// URI scheme, bypassing
+     * the Roblox homepage entirely.
      *
-     * Launch strategy (tried in order):
-     *   1. Flatpak Sober with full roblox:// URI — confirmed working on Linux Mint 22.3
-     *   2. xdg-open roblox:// URI — fallback if Sober registered the URI handler
-     *   3. Friendly error dialog with install instructions
+     * Launch order:
+     *   1. Flatpak Sober  — confirmed on Linux Mint 22.3
+     *   2. xdg-open       — if Sober registered the roblox:// handler
+     *   3. Windows shell  — java.awt.Desktop.browse() for roblox:// on Windows
+     *   4. Error dialog   — with install instructions
      *
-     * Sober (org.vinegarhq.Sober) is the community Linux Roblox client.
-     * Vinegar (org.vinegarhq.Vinegar) does NOT support direct place launching.
-     *
-     * Runs Sober in a background thread so the UI stays responsive.
+     * Runs in a background thread so the UI stays responsive.
      */
-    static void launchGame(String placeId, String gameName, JFrame parentFrame) {
-        placeId    = placeId.strip();
-        String uri = "roblox://experiences/start?placeId=" + placeId;
+    public static void launchGame(String placeId, String gameName, JFrame parentFrame) {
+        final String pid = placeId.strip();
+        final String uri = "roblox://experiences/start?placeId=" + pid;
         LOG.info("[launcher] Launching '" + gameName + "' → " + uri);
 
-        final String finalPlaceId = placeId;
-        final String finalUri     = uri;
-
-        // Background thread — keeps UI responsive while Sober loads
         new Thread(() -> {
-            // ── Strategy 1: Flatpak Sober ─────────────────────────────────────
-            // Pass the full roblox:// URI — bare place ID is silently ignored by Sober.
-            try {
-                ProcessBuilder pb = new ProcessBuilder(
-                    "flatpak", "run", "org.vinegarhq.Sober", finalUri
-                );
-                pb.redirectErrorStream(true); // Merge stdout+stderr for log monitoring
-                Process proc = pb.start();
+            // ── Strategy 1: Flatpak Sober (Linux) ────────────────────────────
+            if (!IS_WINDOWS && !IS_MAC) {
+                try {
+                    ProcessBuilder pb = new ProcessBuilder("flatpak", "run", "org.vinegarhq.Sober", uri);
+                    pb.redirectErrorStream(true); // Merge stdout+stderr for log monitoring
+                    Process proc = pb.start();
+                    // Daemon thread monitors Sober's output for known error strings
+                    Thread monitor = new Thread(() -> monitorSoberLog(proc, gameName, parentFrame));
+                    monitor.setDaemon(true);
+                    monitor.start();
+                    return; // Handed off — done
+                } catch (IOException e) {
+                    LOG.warning("[launcher] flatpak not found, trying xdg-open...");
+                }
 
-                // Monitor Sober's log in a daemon thread for error patterns
-                Thread monitor = new Thread(() -> monitorSoberLog(proc, gameName, parentFrame));
-                monitor.setDaemon(true);
-                monitor.start();
-                return; // Handed off to Sober — done
-            } catch (IOException e) {
-                LOG.severe("[launcher] flatpak not found, falling back to xdg-open...");
+                // ── Strategy 2: xdg-open roblox:// ───────────────────────────
+                try {
+                    new ProcessBuilder("xdg-open", uri).start();
+                    return;
+                } catch (IOException ignored) {}
             }
 
-            // ── Strategy 2: xdg-open roblox:// URI ───────────────────────────
-            // Works if Sober registered the roblox:// protocol handler during install
-            try {
-                new ProcessBuilder("xdg-open", finalUri).start();
-                return;
-            } catch (IOException ignored) {}
+            // ── Strategy 3: Windows / macOS — java.awt.Desktop ───────────────
+            // Desktop.browse() uses the OS-registered handler for roblox://
+            if (IS_WINDOWS || IS_MAC) {
+                try {
+                    java.awt.Desktop.getDesktop().browse(new URI(uri));
+                    return;
+                } catch (Exception e) {
+                    LOG.severe("[launcher] Desktop.browse failed: " + e.getMessage());
+                }
+            }
 
-            // ── Strategy 3: Nothing worked ────────────────────────────────────
+            // ── Strategy 4: Nothing worked ────────────────────────────────────
             SwingUtilities.invokeLater(() ->
                 JOptionPane.showMessageDialog(parentFrame,
                     "Could not launch '" + gameName + "'.\n\n" +
-                    "Make sure Sober is installed:\n" +
-                    "  flatpak install flathub org.vinegarhq.Sober",
+                    "Linux:   flatpak install flathub org.vinegarhq.Sober\n" +
+                    "Windows: Install Roblox from roblox.com",
                     "Launch Failed", JOptionPane.ERROR_MESSAGE)
             );
-        }, "sober-launch").start();
+        }, "sober-launch-" + pid).start();
     }
 
     /**
-     * Background thread: reads Sober's log line by line watching for known error patterns.
-     * On error: kills Sober, shows a friendly popup on the EDT.
+     * Background thread body: tails Sober's merged stdout/stderr looking for
+     * known fatal error strings.  On match: kills Sober and shows a friendly
+     * dialog on the EDT.
+     *
      * Mirrors Python _monitor_sober_log().
      */
-    static void monitorSoberLog(Process proc, String gameName, JFrame parentFrame) {
-        // Error patterns map: log substring → {dialog title, user-friendly message}
+    public static void monitorSoberLog(Process proc, String gameName, JFrame parentFrame) {
+        // Hard-error patterns — shown to the user as a dialog
         Map<String, String[]> ERROR_PATTERNS = new LinkedHashMap<>();
-        ERROR_PATTERNS.put(
-            "App not yet initialized, returning from game",
-            new String[]{
-                "Login / Session Error",
-                "Roblox kicked back to the home screen before the game loaded.\n\n" +
-                "Fix: Open Sober manually, log in again, then try Bloxbox."
-            });
-        ERROR_PATTERNS.put(
-            "HTTP error code:`nil`",
-            new String[]{
-                "Network / Auth Error",
-                "Roblox reported a network or authentication error.\n\n" +
-                "Check your internet connection and try again."
-            });
-        ERROR_PATTERNS.put(
-            "SessionReporterState_GameExitRequested",
-            new String[]{
-                "Kicked by Server",
-                "The Roblox server ended the session before the game started.\n\n" +
-                "The server may be full or restarting — try again shortly."
-            });
+        ERROR_PATTERNS.put("App not yet initialized, returning from game", new String[]{
+            "Login / Session Error",
+            "Roblox returned to the home screen before the game loaded.\n\n" +
+            "Fix: Open Sober manually, log in again, then retry."
+        });
+        ERROR_PATTERNS.put("HTTP error code:`nil`", new String[]{
+            "Network / Auth Error",
+            "Roblox reported a network or authentication error.\n\nCheck your connection and try again."
+        });
+        ERROR_PATTERNS.put("SessionReporterState_GameExitRequested", new String[]{
+            "Kicked by Server",
+            "The Roblox server ended the session before the game started.\n\nTry again shortly."
+        });
 
-        // Watch patterns — logged at debug level, not shown to user
+        // Watch patterns — logged at debug level only, not shown to the child
         Map<String, String> WATCH_PATTERNS = new LinkedHashMap<>();
         WATCH_PATTERNS.put("524",    "Error 524 — Server Timeout");
-        WATCH_PATTERNS.put("server", "The Roblox game server didn't respond in time.");
-        WATCH_PATTERNS.put("Wait",   "This is a temporary Roblox issue — wait and try again.");
+        WATCH_PATTERNS.put("server", "Game server did not respond in time");
+        WATCH_PATTERNS.put("Wait",   "Temporary Roblox issue detected");
 
         String[] detectedError = null;
 
@@ -485,19 +512,17 @@ public class launcher {
             String line;
             while ((line = reader.readLine()) != null) {
 
-                // Optional raw game log output — mirrors Python --game-log-output flag
-                if (GAME_LOG_OUTPUT) LOG.fine(line);
+                // Raw game log passthrough — enabled with --game-log-output
+                if (GAME_LOG_OUTPUT) LOG.fine("[sober] " + line);
 
-                // Debug-level watch pattern logging
+                // Debug-only watch pattern scan
                 if (DEBUG_MODE) {
-                    for (Map.Entry<String, String> watch : WATCH_PATTERNS.entrySet()) {
-                        if (line.contains(watch.getKey())) {
-                            LOG.severe("[bloxbox] Watch Error detected: " + watch.getKey());
-                        }
-                    }
+                    for (Map.Entry<String, String> w : WATCH_PATTERNS.entrySet())
+                        if (line.contains(w.getKey()))
+                            LOG.warning("[bloxbox] Watch hit: " + w.getValue());
                 }
 
-                // Check for hard error patterns
+                // Hard-error scan — stop on first match
                 for (Map.Entry<String, String[]> err : ERROR_PATTERNS.entrySet()) {
                     if (line.contains(err.getKey())) {
                         detectedError = err.getValue();
@@ -513,757 +538,229 @@ public class launcher {
         }
 
         if (detectedError != null) {
-            final String[] error = detectedError;
+            final String[] err = detectedError;
             terminateSober();
-            // Show error dialog on the EDT — never touch Swing from background threads
+            // Always update Swing from the EDT — never from a background thread
             SwingUtilities.invokeLater(() ->
                 JOptionPane.showMessageDialog(parentFrame,
-                    error[1],
-                    "⚠️  " + error[0] + " — " + gameName,
+                    err[1], "⚠️  " + err[0] + " — " + gameName,
                     JOptionPane.ERROR_MESSAGE)
             );
         }
     }
 
     // ══════════════════════════════════════════════════════════════════════════
-    // MINIMAL JSON HELPERS (no external dep)
+    // MINIMAL JSON HELPERS — no external deps, sufficient for our controlled format
     // ══════════════════════════════════════════════════════════════════════════
 
     /**
-     * Parse {"games":[{"name":"...","place_id":"...","description":"..."},...]}
-     * Returns list of maps. Basic parser — sufficient for controlled config format.
+     * Parse {"games":[{...},{...}]} into a list of string maps.
+     * Handles the standard whitelist config format.
      */
-    static List<Map<String, String>> parseGamesJson(String json) {
+    public static List<Map<String, String>> parseGamesJson(String json) {
+        return parseJsonArray(json);
+    }
+
+    /** Parse {"requests":[{...}]} — same shape as games. */
+    public static List<Map<String, String>> parseRequestsJson(String json) {
+        return parseJsonArray(json);
+    }
+
+    /** Internal: extract the first JSON array from the string and parse its objects. */
+    private static List<Map<String, String>> parseJsonArray(String json) {
         List<Map<String, String>> result = new ArrayList<>();
-        // Find the "games" array
-        int arrStart = json.indexOf("[");
-        int arrEnd   = json.lastIndexOf("]");
+        int arrStart = json.indexOf('[');
+        int arrEnd   = json.lastIndexOf(']');
         if (arrStart < 0 || arrEnd < 0) return result;
-        String arr = json.substring(arrStart + 1, arrEnd);
-        // Split on object boundaries — find each {...} block
-        for (String obj : splitObjects(arr)) {
+        for (String obj : splitObjects(json.substring(arrStart + 1, arrEnd))) {
             Map<String, String> m = parseStringMap(obj);
             if (!m.isEmpty()) result.add(m);
         }
         return result;
     }
 
-    /** Parse {"requests":[...]} — same structure as games but different key. */
-    @SuppressWarnings("unchecked")
-    static List<Map<String, String>> parseRequestsJson(String json) {
-        List<Map<String, String>> result = new ArrayList<>();
-        int arrStart = json.indexOf("[");
-        int arrEnd   = json.lastIndexOf("]");
-        if (arrStart < 0 || arrEnd < 0) return result;
-        String arr = json.substring(arrStart + 1, arrEnd);
-        for (String obj : splitObjects(arr)) {
-            Map<String, String> m = parseStringMap(obj);
-            if (!m.isEmpty()) result.add(m);
-        }
-        return result;
-    }
-
-    /** Split a JSON array body into individual object strings. */
-    static List<String> splitObjects(String arrayBody) {
-        List<String> objs  = new ArrayList<>();
+    /** Split a JSON array body into individual top-level {...} object strings. */
+    public static List<String> splitObjects(String arrayBody) {
+        List<String> objs = new ArrayList<>();
         int depth = 0, start = -1;
         for (int i = 0; i < arrayBody.length(); i++) {
             char c = arrayBody.charAt(i);
-            if (c == '{') { if (depth++ == 0) start = i; }
+            if      (c == '{') { if (depth++ == 0) start = i; }
             else if (c == '}') { if (--depth == 0 && start >= 0) { objs.add(arrayBody.substring(start, i + 1)); start = -1; } }
         }
         return objs;
     }
 
-    /** Parse a flat JSON object {"key":"value",...} into a Map<String,String>. */
-    static Map<String, String> parseStringMap(String obj) {
-        Map<String, String> m  = new LinkedHashMap<>();
-        Pattern p = Pattern.compile("\"([^\"]+)\"\\s*:\\s*\"([^\"]*)\"");
+    /**
+     * Parse a flat JSON object {"key":"value",...} into a LinkedHashMap.
+     * Preserves key insertion order — important for requests serialisation.
+     */
+    /**
+     * Parse a flat JSON object {"key":"value",...} into a LinkedHashMap.
+     * Preserves key insertion order — important for requests serialisation.
+     *
+     * Unicode / emoji handling:
+     *   JSON encodes emoji above U+FFFF as surrogate pairs: \U+d83c\U+df7c
+     *   Our regex captures those as literal backslash-u sequences. We pass
+     *   the raw captured value through unescapeJson() which:
+     *     1. Combines surrogate pairs into proper Java char sequences
+     *     2. Handles u+XXXX single-codepoint escapes
+     *     3. Handles standard escapes: \n \t \r \\ \"
+     *   Without this, emoji names render as [\U+d83c\U+df7c] in game cards.
+     */
+    public static Map<String, String> parseStringMap(String obj) {
+        Map<String, String> m = new LinkedHashMap<>();
+        // Match "key": "value" pairs — captures raw escaped content inside the quotes
+        Pattern p  = Pattern.compile("\"([^\"]+)\"\\s*:\\s*\"((?:[^\"\\\\]|\\\\.)*)\"");
         Matcher mt = p.matcher(obj);
-        while (mt.find()) m.put(mt.group(1), mt.group(2));
+        while (mt.find()) m.put(mt.group(1), unescapeJson(mt.group(2)));
         return m;
     }
 
-    /** Serialize list of request maps back to JSON string. */
-    static String buildRequestsJson(List<Map<String, String>> requests) {
-        StringBuilder sb = new StringBuilder("{\n  \"requests\": [\n");
-        for (int i = 0; i < requests.size(); i++) {
-            sb.append("    {");
-            Map<String, String> r = requests.get(i);
-            List<String> keys = new ArrayList<>(r.keySet());
-            for (int j = 0; j < keys.size(); j++) {
-                String k = keys.get(j), v = r.get(k);
-                sb.append("\"").append(k).append("\": \"").append(v.replace("\"", "\\\"")).append("\"");
-                if (j < keys.size() - 1) sb.append(", ");
+    /**
+     * Unescape a JSON string value captured by the regex in parseStringMap.
+     *
+     * Handles:
+     *   u+XXXX        — single Unicode escape (BMP codepoints)
+     *   u+XXXXu+XXXX — surrogate pair (emoji / supplementary codepoints above U+FFFF)
+     *                    e.g. \U+d83c\U+df7c -> 🍼  \U+d83e\U+dde0 -> 🧠
+     *   \\"          — escaped quote -> "
+     *   \\n          — newline
+     *   \\t          — tab
+     *   \\r          — carriage return
+     *   \\\\       — escaped backslash -> \
+     */
+    public static String unescapeJson(String s) {
+        if (s == null || s.isEmpty()) return s;
+        StringBuilder sb  = new StringBuilder(s.length());
+        int           len = s.length();
+        for (int i = 0; i < len; i++) {
+            char c = s.charAt(i);
+            if (c != '\\' || i + 1 >= len) {
+                sb.append(c);
+                continue;
             }
-            sb.append("}");
-            if (i < requests.size() - 1) sb.append(",");
-            sb.append("\n");
+            char next = s.charAt(i + 1);
+            switch (next) {
+                case '"':  sb.append('"');  i++; break;
+                case '\\': sb.append('\\'); i++; break;
+                case 'n':  sb.append('\n'); i++; break;
+                case 't':  sb.append('\t'); i++; break;
+                case 'r':  sb.append('\r'); i++; break;
+                case 'u':
+                    // Need at least 4 hex digits after u
+                    if (i + 5 <= len) {
+                        String hex = s.substring(i + 2, i + 6);
+                        try {
+                            int codeUnit = Integer.parseInt(hex, 16);
+                            // Check for surrogate pair: high surrogate \U+D800-\U+DBFF
+                            // followed by low surrogate \U+DC00-\U+DFFF
+                            if (codeUnit >= 0xD800 && codeUnit <= 0xDBFF && i + 11 <= len
+                                    && s.charAt(i + 6) == '\\' && s.charAt(i + 7) == 'u') {
+                                String hex2 = s.substring(i + 8, i + 12);
+                                int low = Integer.parseInt(hex2, 16);
+                                if (low >= 0xDC00 && low <= 0xDFFF) {
+                                    // Valid surrogate pair — combine into supplementary codepoint
+                                    int codePoint = Character.toCodePoint((char) codeUnit, (char) low);
+                                    sb.appendCodePoint(codePoint);
+                                    i += 11; // consumed uXXXXuXXXX (12 chars, -1 for loop i++)
+                                    break;
+                                }
+                            }
+                            // Single BMP codepoint
+                            sb.append((char) codeUnit);
+                            i += 5; // consumed uXXXX (6 chars, -1 for loop i++)
+                        } catch (NumberFormatException e) {
+                            // Not valid hex — emit literally
+                            sb.append(c);
+                        }
+                    } else {
+                        sb.append(c); // Not enough chars — emit literally
+                    }
+                    break;
+                default:
+                    sb.append(c); // Unknown escape — emit backslash literally
+                    break;
+            }
         }
-        sb.append("  ]\n}");
         return sb.toString();
     }
 
-    // ══════════════════════════════════════════════════════════════════════════
-    // GAME CARD COMPONENT
-    // ══════════════════════════════════════════════════════════════════════════
-
     /**
-     * A single game tile in the launcher grid.
-     * Shows game thumbnail (loaded async in background), name, and Play button.
-     * Hover highlights the card background.
-     * Mirrors Python GameCard(tk.Frame).
+     * Strip emoji and clean up a Roblox game name for display in Swing.
+     * Java 2D on Linux cannot render color emoji fonts via any Swing path.
+     * Removes:
+     *   - Supplementary codepoints (U+1F000+) — all modern emoji
+     *   - BMP emoji ranges (U+2600-U+27FF misc symbols/dingbats)
+     *   - Variation selectors (U+FE00-U+FE0F)
+     *   - Zero-width joiners (U+200D)
+     *   - Leftover empty brackets [] or () after stripping
+     *   - Leading/trailing whitespace and punctuation artifacts
      */
-    static class GameCard extends JPanel {
+    public static String cleanGameName(String name) {
+        if (name == null || name.isEmpty()) return name;
+        StringBuilder sb = new StringBuilder();
+        name.codePoints().forEach(cp -> {
+            // Skip all emoji and symbol ranges
+            if (cp >= 0x1F000) return;                        // Supplementary emoji
+            if (cp >= 0x2600 && cp <= 0x27FF) return;         // Misc symbols + dingbats
+            if (cp >= 0x2B00 && cp <= 0x2BFF) return;         // Misc symbols and arrows
+            if (cp >= 0xFE00 && cp <= 0xFE0F) return;         // Variation selectors
+            if (cp == 0x200D) return;                          // Zero-width joiner
+            sb.appendCodePoint(cp);
+        });
+        // Remove empty bracket pairs left behind after emoji removal e.g. "[] " or "() "
+        String result = sb.toString()
+            .replaceAll("\\[\\s*\\]", "")   // empty []
+            .replaceAll("\\(\\s*\\)", "")   // empty ()
+            .replaceAll("\s{2,}", " ")     // collapse multiple spaces
+            .strip();
+        return result.isEmpty() ? name : result; // Fall back to original if everything was stripped
+    }
 
-        private final Map<String, String> game;
-        private       JLabel             thumbLabel; // Placeholder → replaced with image async
-        private final JFrame             parentFrame;
-
-        GameCard(Map<String, String> game, JFrame parentFrame) {
-            this.game        = game;
-            this.parentFrame = parentFrame;
-
-            setPreferredSize(new Dimension(CARD_WIDTH, CARD_HEIGHT));
-            setBackground(CARD_COLOR);
-            setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
-            setBorder(BorderFactory.createEmptyBorder(10, 8, 8, 8));
-
-            buildUI();
-            bindHover();
-
-            // Kick off thumbnail fetch in background — keeps UI snappy
-            // Mirrors Python threading.Thread(target=self._load_thumbnail, daemon=True).start()
-            CompletableFuture.runAsync(() -> loadThumbnail());
-        }
-
-        private void buildUI() {
-            // Thumbnail placeholder shown while image is loading
-            thumbLabel = new JLabel("⏳", SwingConstants.CENTER);
-            thumbLabel.setFont(new Font("Segoe UI Emoji", Font.PLAIN, 28));
-            thumbLabel.setForeground(SUBTEXT_COLOR);
-            thumbLabel.setBackground(CARD_COLOR);
-            thumbLabel.setOpaque(true);
-            thumbLabel.setPreferredSize(new Dimension(THUMB_SIZE, THUMB_SIZE));
-            thumbLabel.setMaximumSize(new Dimension(THUMB_SIZE, THUMB_SIZE));
-            thumbLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
-            add(thumbLabel);
-            add(Box.createVerticalStrut(4));
-
-            // Game name — truncated with HTML wrapping if too long
-            String displayName = game.getOrDefault("name", "Unknown");
-            JLabel nameLabel   = new JLabel(
-                "<html><div style='text-align:center;width:" + (CARD_WIDTH - 16) + "px'>" +
-                displayName + "</div></html>",
-                SwingConstants.CENTER
-            );
-            nameLabel.setFont(FONT_CARD);
-            nameLabel.setForeground(TEXT_COLOR);
-            nameLabel.setBackground(CARD_COLOR);
-            nameLabel.setOpaque(true);
-            nameLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
-            add(nameLabel);
-            add(Box.createVerticalStrut(2));
-
-            // Play button — triggers direct game launch via Sober
-            JButton playBtn = makeButton("▶  Play", ACCENT_COLOR);
-            playBtn.addActionListener(e -> onLaunch());
-            playBtn.setAlignmentX(Component.CENTER_ALIGNMENT);
-            add(Box.createVerticalStrut(8));
-            add(playBtn);
-        }
-
-        /** Load thumbnail image from cache or Roblox CDN in background. */
-        private void loadThumbnail() {
-            String placeId = game.getOrDefault("place_id", "");
-            LOG.fine("[bloxbox] Loading thumbnail for " + placeId);
-
-            BufferedImage img = fetchThumbnailImage(placeId);
-            LOG.fine("[bloxbox] fetchThumbnailImage returned: " + img);
-
-            if (img == null) {
-                // No thumbnail available — swap spinner for game controller emoji
-                SwingUtilities.invokeLater(() -> setPlaceholder("🎮"));
-                LOG.severe("No thumbnail available for " + placeId);
-                return;
+    /** Serialise a list of request maps back to a pretty-printed JSON string. */
+    public static String buildRequestsJson(List<Map<String, String>> requests) {
+        StringBuilder sb = new StringBuilder("{\n  \"requests\": [\n");
+        for (int i = 0; i < requests.size(); i++) {
+            sb.append("    {");
+            Map<String, String> r    = requests.get(i);
+            List<String>        keys = new ArrayList<>(r.keySet());
+            for (int j = 0; j < keys.size(); j++) {
+                String k = keys.get(j), v = r.get(k).replace("\"", "\\\"");
+                sb.append("\"").append(k).append("\": \"").append(v).append("\"");
+                if (j < keys.size() - 1) sb.append(", ");
             }
-
-            // Resize to fit the card neatly — mirrors PIL Image.resize(LANCZOS)
-            Image scaled = img.getScaledInstance(THUMB_SIZE, THUMB_SIZE, Image.SCALE_SMOOTH);
-            LOG.fine("[bloxbox] resizing thumbnail for " + placeId);
-
-            // Schedule the UI update on the EDT — never touch Swing from background threads
-            SwingUtilities.invokeLater(() -> {
-                thumbLabel.setIcon(new ImageIcon(scaled));
-                thumbLabel.setText("");
-                LOG.fine("[bloxbox] thumbnail set ok for " + placeId);
-            });
+            sb.append(i < requests.size() - 1 ? "},\n" : "}\n");
         }
-
-        /** Replace the spinner with a fallback emoji (API failed or no image). */
-        private void setPlaceholder(String emoji) {
-            thumbLabel.setFont(new Font("Segoe UI Emoji", Font.PLAIN, 32));
-            thumbLabel.setText(emoji);
-            thumbLabel.setIcon(null);
-        }
-
-        /** Play button click handler — kills existing Sober then launches the game. */
-        private void onLaunch() {
-            // Kill any already-running Sober instance before launching
-            try {
-                Process check = Runtime.getRuntime().exec(new String[]{"pgrep", "sober"});
-                if (check.waitFor() == 0) terminateSober(); // Sober is running — kill it
-            } catch (Exception ignored) {}
-
-            launchGame(
-                game.getOrDefault("place_id", ""),
-                game.getOrDefault("name", "Game"),
-                parentFrame
-            );
-        }
-
-        /**
-         * Highlight card on mouse-over with a slightly lighter background.
-         * Mirrors Python _bind_hover() — applies to panel and all child components.
-         */
-        private void bindHover() {
-            MouseAdapter hover = new MouseAdapter() {
-                @Override public void mouseEntered(MouseEvent e) { setCardBg(HOVER_COLOR); }
-                @Override public void mouseExited (MouseEvent e) { setCardBg(CARD_COLOR);  }
-            };
-
-            // Apply to this panel and all direct children (labels, button)
-            addMouseListener(hover);
-            for (Component c : getComponents()) c.addMouseListener(hover);
-        }
-
-        /** Set background on this card and all opaque children simultaneously. */
-        private void setCardBg(Color bg) {
-            setBackground(bg);
-            for (Component c : getComponents()) {
-                if (c.isOpaque()) c.setBackground(bg);
-            }
-            repaint();
-        }
+        return sb.append("  ]\n}").toString();
     }
 
     // ══════════════════════════════════════════════════════════════════════════
-    // PIN DIALOG
-    // ══════════════════════════════════════════════════════════════════════════
-
-    /**
-     * Modal PIN entry dialog shown before the request flow starts.
-     * Verifies the entered PIN against the stored SHA-256 hash via verifyPin().
-     * Returns verified=true only if the correct PIN was entered.
-     * Mirrors Python PinDialog(tk.Toplevel).
-     */
-    static class PinDialog extends JDialog {
-
-        boolean verified = false; // Set to true only on correct PIN
-
-        PinDialog(JFrame parent) {
-            super(parent, "Enter Passcode", true); // true = modal
-            setResizable(false);
-            getContentPane().setBackground(BG_COLOR);
-
-            JPasswordField pinField  = new JPasswordField(12);
-            JLabel         errorLbl  = new JLabel(" "); // Reserve space for error message
-
-            pinField.setFont(new Font("Georgia", Font.PLAIN, 18));
-            pinField.setBackground(Color.decode("#252540"));
-            pinField.setForeground(TEXT_COLOR);
-            pinField.setCaretColor(TEXT_COLOR);
-            pinField.setBorder(BorderFactory.createEmptyBorder(8, 8, 8, 8));
-            pinField.setEchoChar('●'); // Mask PIN characters
-
-            errorLbl.setFont(FONT_SMALL);
-            errorLbl.setForeground(ACCENT_COLOR);
-
-            // ── Layout ────────────────────────────────────────────────────────
-            JPanel panel = new JPanel();
-            panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
-            panel.setBackground(BG_COLOR);
-            panel.setBorder(BorderFactory.createEmptyBorder(24, 30, 20, 30));
-
-            JLabel heading = new JLabel("🔒  Enter Passcode to Request a Game");
-            heading.setFont(new Font("Georgia", Font.BOLD, 14));
-            heading.setForeground(TEXT_COLOR);
-            heading.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(heading);
-            panel.add(Box.createVerticalStrut(6));
-
-            JLabel sub = new JLabel("Ask a parent if you don't know the Passcode.");
-            sub.setFont(FONT_SMALL);
-            sub.setForeground(SUBTEXT_COLOR);
-            sub.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(sub);
-            panel.add(Box.createVerticalStrut(14));
-
-            pinField.setAlignmentX(Component.CENTER_ALIGNMENT);
-            pinField.setMaximumSize(new Dimension(200, 40));
-            panel.add(pinField);
-            panel.add(Box.createVerticalStrut(6));
-
-            errorLbl.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(errorLbl);
-            panel.add(Box.createVerticalStrut(12));
-
-            // Buttons
-            JPanel btnRow = new JPanel(new FlowLayout(FlowLayout.CENTER, 8, 0));
-            btnRow.setBackground(BG_COLOR);
-
-            JButton confirmBtn = makeButton("Confirm", REQUEST_COLOR);
-            JButton cancelBtn  = makeButton("Cancel",  Color.decode("#333333"));
-
-            btnRow.add(confirmBtn);
-            btnRow.add(cancelBtn);
-            panel.add(btnRow);
-
-            add(panel);
-
-            // ── Event handlers ────────────────────────────────────────────────
-            Runnable onSubmit = () -> {
-                String pin = new String(pinField.getPassword()).strip();
-                if (pin.isEmpty()) {
-                    errorLbl.setText("⚠️  Please enter a PIN.");
-                    return;
-                }
-                if (verifyPin(pin)) {
-                    verified = true; // Correct — set verified and close
-                    dispose();
-                } else {
-                    // Wrong — clear entry, show error, let them try again
-                    pinField.setText("");
-                    errorLbl.setText("❌  Incorrect PIN. Try again.");
-                    pinField.requestFocus();
-                }
-            };
-
-            confirmBtn.addActionListener(e -> onSubmit.run());
-            cancelBtn.addActionListener(e -> dispose());
-
-            // Bind Enter key to submit — mirrors Python self.bind("<Return>", ...)
-            pinField.addActionListener(e -> onSubmit.run());
-
-            pack();
-            setLocationRelativeTo(parent);
-
-            // Focus the PIN entry immediately after dialog appears
-            SwingUtilities.invokeLater(pinField::requestFocusInWindow);
-        }
-    }
-
-    // ══════════════════════════════════════════════════════════════════════════
-    // REQUEST DIALOG — FALLBACK (no embedded browser)
-    // ══════════════════════════════════════════════════════════════════════════
-
-    /**
-     * Fallback request dialog for when no embedded browser is available.
-     * Opens roblox.com/charts in the system browser (Firefox or xdg-open),
-     * then child enters the place ID from the URL bar manually.
-     * Mirrors Python RequestDialogFallback(tk.Toplevel).
-     *
-     * Note: A full embedded-browser dialog (equivalent to Python's RequestDialog
-     * using pywebview) would require JavaFX WebView or JCEF. For a pure-Swing
-     * build this fallback matches the Python RequestDialogFallback behaviour exactly.
-     */
-    static class RequestDialogFallback extends JDialog {
-
-        private String fetchedPlaceId  = null;
-        private String fetchedGameName = null;
-
-        private JTextField idEntry;
-        private JLabel     thumbLabel;
-        private JLabel     nameLabel;
-        private JLabel     statusLabel;
-        private JTextField noteEntry;
-        private JButton    submitBtn;
-
-        RequestDialogFallback(JFrame parent) {
-            super(parent, "Request a Game", true); // true = modal
-            setResizable(false);
-            getContentPane().setBackground(BG_COLOR);
-
-            buildUI();
-            pack();
-            setLocationRelativeTo(parent);
-        }
-
-        private void buildUI() {
-            JPanel panel = new JPanel();
-            panel.setLayout(new BoxLayout(panel, BoxLayout.Y_AXIS));
-            panel.setBackground(BG_COLOR);
-            panel.setBorder(BorderFactory.createEmptyBorder(20, 24, 20, 24));
-
-            // ── Title ─────────────────────────────────────────────────────────
-            JLabel title = new JLabel("Request a New Game");
-            title.setFont(new Font("Georgia", Font.BOLD, 16));
-            title.setForeground(TEXT_COLOR);
-            title.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(title);
-            panel.add(Box.createVerticalStrut(4));
-
-            // ── Instructions ──────────────────────────────────────────────────
-            JLabel instructions = new JLabel(
-                "<html><div style='text-align:center'>" +
-                "Find a game in the browser that just opened.<br>" +
-                "Copy the number from the URL bar:<br>" +
-                "roblox.com/games/185655149/... → enter 185655149" +
-                "</div></html>",
-                SwingConstants.CENTER
-            );
-            instructions.setFont(FONT_SMALL);
-            instructions.setForeground(SUBTEXT_COLOR);
-            instructions.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(instructions);
-            panel.add(Box.createVerticalStrut(10));
-
-            // ── Place ID entry + look-up button ───────────────────────────────
-            JPanel entryRow = new JPanel(new FlowLayout(FlowLayout.LEFT, 0, 0));
-            entryRow.setBackground(BG_COLOR);
-
-            idEntry = new JTextField(20);
-            idEntry.setFont(FONT_SMALL);
-            idEntry.setBackground(Color.decode("#252540"));
-            idEntry.setForeground(TEXT_COLOR);
-            idEntry.setCaretColor(TEXT_COLOR);
-            idEntry.setBorder(BorderFactory.createEmptyBorder(6, 6, 6, 6));
-
-            JButton lookupBtn = makeButton("Look Up", REQUEST_COLOR);
-            lookupBtn.addActionListener(e -> onLookup());
-
-            entryRow.add(idEntry);
-            entryRow.add(Box.createHorizontalStrut(8));
-            entryRow.add(lookupBtn);
-            panel.add(entryRow);
-            panel.add(Box.createVerticalStrut(10));
-
-            // ── Preview area ──────────────────────────────────────────────────
-            thumbLabel = new JLabel("", SwingConstants.CENTER);
-            thumbLabel.setFont(new Font("Segoe UI Emoji", Font.PLAIN, 28));
-            thumbLabel.setForeground(SUBTEXT_COLOR);
-            thumbLabel.setBackground(BG_COLOR);
-            thumbLabel.setOpaque(true);
-            thumbLabel.setPreferredSize(new Dimension(100, 100));
-            thumbLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(thumbLabel);
-            panel.add(Box.createVerticalStrut(4));
-
-            nameLabel = new JLabel("", SwingConstants.CENTER);
-            nameLabel.setFont(FONT_CARD);
-            nameLabel.setForeground(TEXT_COLOR);
-            nameLabel.setBackground(BG_COLOR);
-            nameLabel.setOpaque(true);
-            nameLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(nameLabel);
-
-            statusLabel = new JLabel("", SwingConstants.CENTER);
-            statusLabel.setFont(FONT_SMALL);
-            statusLabel.setForeground(SUBTEXT_COLOR);
-            statusLabel.setAlignmentX(Component.CENTER_ALIGNMENT);
-            panel.add(statusLabel);
-            panel.add(Box.createVerticalStrut(10));
-
-            // ── Optional note ─────────────────────────────────────────────────
-            JLabel noteLbl = new JLabel("Why do you want to play it? (optional):");
-            noteLbl.setFont(FONT_SMALL);
-            noteLbl.setForeground(TEXT_COLOR);
-            panel.add(noteLbl);
-            panel.add(Box.createVerticalStrut(4));
-
-            noteEntry = new JTextField(30);
-            noteEntry.setFont(FONT_SMALL);
-            noteEntry.setBackground(Color.decode("#252540"));
-            noteEntry.setForeground(TEXT_COLOR);
-            noteEntry.setCaretColor(TEXT_COLOR);
-            noteEntry.setBorder(BorderFactory.createEmptyBorder(6, 6, 6, 6));
-            panel.add(noteEntry);
-            panel.add(Box.createVerticalStrut(16));
-
-            // ── Buttons — Submit disabled until lookup succeeds ───────────────
-            JPanel btnRow = new JPanel(new FlowLayout(FlowLayout.CENTER, 8, 0));
-            btnRow.setBackground(BG_COLOR);
-
-            submitBtn = makeButton("Send Request", Color.decode("#444444"));
-            submitBtn.setForeground(Color.decode("#888888"));
-            submitBtn.setEnabled(false); // Enabled after successful lookup
-
-            JButton cancelBtn = makeButton("Cancel", Color.decode("#333333"));
-            cancelBtn.addActionListener(e -> dispose());
-
-            submitBtn.addActionListener(e -> onSubmit());
-
-            btnRow.add(submitBtn);
-            btnRow.add(cancelBtn);
-            panel.add(btnRow);
-
-            add(panel);
-        }
-
-        /** Validate the place ID and kick off background name+thumbnail lookup. */
-        private void onLookup() {
-            String placeId = idEntry.getText().strip();
-
-            // Validate: place IDs are all digits
-            if (!placeId.matches("\\d+")) {
-                statusLabel.setForeground(ACCENT_COLOR);
-                statusLabel.setText("⚠️  Place ID must be a number.");
-                return;
-            }
-
-            statusLabel.setForeground(SUBTEXT_COLOR);
-            statusLabel.setText("Looking up game...");
-            nameLabel.setText("");
-            thumbLabel.setIcon(null);
-            thumbLabel.setText("⏳");
-            submitBtn.setEnabled(false);
-            submitBtn.setBackground(Color.decode("#444444"));
-            submitBtn.setForeground(Color.decode("#888888"));
-
-            // Background lookup — keeps the dialog responsive
-            CompletableFuture.runAsync(() -> {
-                String thumbUrl  = fetchThumbnailUrl(placeId);
-                String gameName  = fetchGameName(placeId);
-                SwingUtilities.invokeLater(() -> showPreview(placeId, gameName, thumbUrl));
-            });
-        }
-
-        /** Update preview area and enable Submit if lookup succeeded. */
-        private void showPreview(String placeId, String gameName, String thumbUrl) {
-            if (gameName == null && thumbUrl == null) {
-                statusLabel.setForeground(ACCENT_COLOR);
-                statusLabel.setText("⚠️  Game not found. Check the Place ID.");
-                thumbLabel.setText("❓");
-                return;
-            }
-
-            fetchedPlaceId  = placeId;
-            fetchedGameName = gameName != null ? gameName : "Game " + placeId;
-            nameLabel.setText(fetchedGameName);
-
-            if (thumbUrl != null) {
-                // Load thumbnail in background — keep UI responsive
-                final String url = thumbUrl;
-                CompletableFuture.runAsync(() -> {
-                    try {
-                        HttpRequest req = HttpRequest.newBuilder(URI.create(url))
-                            .timeout(Duration.ofSeconds(8)).GET().build();
-                        byte[] data = HTTP.send(req, HttpResponse.BodyHandlers.ofByteArray()).body();
-                        BufferedImage img = ImageIO.read(new ByteArrayInputStream(data));
-                        if (img != null) {
-                            Image scaled = img.getScaledInstance(100, 100, Image.SCALE_SMOOTH);
-                            SwingUtilities.invokeLater(() -> {
-                                thumbLabel.setIcon(new ImageIcon(scaled));
-                                thumbLabel.setText("");
-                            });
-                        }
-                    } catch (Exception e) {
-                        SwingUtilities.invokeLater(() -> { thumbLabel.setIcon(null); thumbLabel.setText("🎮"); });
-                    }
-                });
-            } else {
-                thumbLabel.setIcon(null);
-                thumbLabel.setText("🎮");
-            }
-
-            statusLabel.setForeground(Color.decode("#4caf50"));
-            statusLabel.setText("✅  Game found!");
-
-            // Enable submit now that lookup succeeded
-            submitBtn.setEnabled(true);
-            submitBtn.setBackground(REQUEST_COLOR);
-            submitBtn.setForeground(Color.WHITE);
-        }
-
-        /** Save the request and close the dialog. */
-        private void onSubmit() {
-            if (fetchedPlaceId == null) return;
-
-            boolean ok = saveRequest(
-                fetchedPlaceId,
-                fetchedGameName,
-                noteEntry.getText().strip(),
-                ""
-            );
-            dispose();
-
-            if (ok) {
-                JOptionPane.showMessageDialog(getParent(),
-                    "'" + fetchedGameName + "' has been requested.\n" +
-                    "Ask a parent to review it!",
-                    "Request Sent! 🎮", JOptionPane.INFORMATION_MESSAGE);
-            } else {
-                JOptionPane.showMessageDialog(getParent(),
-                    "Permission error saving your request.\n" +
-                    "Ask a parent to check the requests file.",
-                    "Could Not Save", JOptionPane.ERROR_MESSAGE);
-            }
-        }
-    }
-
-    // ══════════════════════════════════════════════════════════════════════════
-    // MAIN LAUNCHER WINDOW
-    // ══════════════════════════════════════════════════════════════════════════
-
-    /**
-     * Main launcher window.
-     * Header with title + Request button, then a scrollable grid of game cards.
-     * Mirrors Python LauncherApp(tk.Tk).
-     */
-    static class LauncherApp extends JFrame {
-
-        LauncherApp() {
-            super(WINDOW_TITLE);
-            setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
-            getContentPane().setBackground(BG_COLOR);
-            setLayout(new BorderLayout());
-
-            buildUI();
-        }
-
-        private void buildUI() {
-            // ── Header bar ────────────────────────────────────────────────────
-            JPanel header = new JPanel(new BorderLayout());
-            header.setBackground(BG_COLOR);
-            header.setBorder(BorderFactory.createEmptyBorder(24, 30, 8, 30));
-
-            // Left side: title + subtitle
-            JPanel titleGroup = new JPanel(new FlowLayout(FlowLayout.LEFT, 16, 6));
-            titleGroup.setBackground(BG_COLOR);
-
-            JLabel titleLbl = new JLabel("🎮 BloxBox Game Launcher");
-            titleLbl.setFont(FONT_TITLE);
-            titleLbl.setForeground(TEXT_COLOR);
-            titleGroup.add(titleLbl);
-
-            JLabel subLbl = new JLabel("Approved games only");
-            subLbl.setFont(FONT_SMALL);
-            subLbl.setForeground(SUBTEXT_COLOR);
-            titleGroup.add(subLbl);
-
-            // Right side: request button
-            JButton requestBtn = makeButton("＋  Request a Game", REQUEST_COLOR);
-            requestBtn.addActionListener(e -> openRequestDialog());
-
-            header.add(titleGroup,  BorderLayout.WEST);
-            header.add(requestBtn,  BorderLayout.EAST);
-            add(header, BorderLayout.NORTH);
-
-            // ── Scrollable game grid ──────────────────────────────────────────
-            JPanel gridHolder = new JPanel();
-            gridHolder.setBackground(BG_COLOR);
-            populateGrid(gridHolder);
-
-            JScrollPane scroll = new JScrollPane(gridHolder);
-            scroll.setBackground(BG_COLOR);
-            scroll.getViewport().setBackground(BG_COLOR);
-            scroll.setBorder(BorderFactory.createEmptyBorder());
-            scroll.getVerticalScrollBar().setUnitIncrement(16); // Smooth scrolling
-
-            add(scroll, BorderLayout.CENTER);
-        }
-
-        /**
-         * Load approved games and render a GameCard for each.
-         * Equivalent to Python _populate_grid() — uses a FlowLayout grid.
-         */
-        private void populateGrid(JPanel container) {
-            List<Map<String, String>> games = loadConfig();
-            container.setBorder(BorderFactory.createEmptyBorder(10, 20, 10, 20));
-
-            if (games.isEmpty()) {
-                // Empty state — point child to the request button
-                container.setLayout(new BorderLayout());
-                JLabel empty = new JLabel(
-                    "<html><div style='text-align:center'>" +
-                    "No games approved yet.<br>Use '＋ Request a Game' above!</div></html>",
-                    SwingConstants.CENTER
-                );
-                empty.setFont(new Font("Georgia", Font.PLAIN, 16));
-                empty.setForeground(SUBTEXT_COLOR);
-                empty.setBorder(BorderFactory.createEmptyBorder(80, 40, 80, 40));
-                container.add(empty, BorderLayout.CENTER);
-                return;
-            }
-
-            // Render cards in a COLS-wide grid — mirrors Python grid(row, column)
-            container.setLayout(new GridLayout(0, COLS, 12, 12)); // 0 rows = auto-expand
-            for (Map<String, String> game : games) {
-                container.add(new GameCard(game, this));
-            }
-        }
-
-        /**
-         * Open the game request dialog.
-         * First verifies the PIN — only proceeds if correct.
-         * Opens system browser (Firefox or xdg-open) then shows the fallback dialog.
-         * Note: the full embedded-browser experience (Python RequestDialog via pywebview)
-         * would require JavaFX WebView or JCEF — this port uses the fallback by default.
-         */
-        private void openRequestDialog() {
-            // Gate on PIN verification before showing request dialog
-            PinDialog pin = new PinDialog(this);
-            pin.setVisible(true);
-            if (!pin.verified) return; // Cancelled or wrong PIN — do nothing
-
-            // Open the system browser so the child can browse Roblox charts
-            openBrowser(ROBLOX_GAME_SEARCH_URL);
-
-            // Show the fallback place-ID entry dialog
-            RequestDialogFallback dialog = new RequestDialogFallback(this);
-            dialog.setVisible(true);
-        }
-
-        /**
-         * Open a URL in the system browser.
-         * Tries Firefox first, then xdg-open (same order as Python fallback chain).
-         */
-        private void openBrowser(String url) {
-            // Strategy 1: Firefox
-            try {
-                new ProcessBuilder("firefox", url)
-                    .redirectOutput(ProcessBuilder.Redirect.DISCARD)
-                    .redirectError(ProcessBuilder.Redirect.DISCARD)
-                    .start();
-                return;
-            } catch (IOException ignored) {}
-
-            // Strategy 2: xdg-open (desktop default browser)
-            try {
-                new ProcessBuilder("xdg-open", url)
-                    .redirectOutput(ProcessBuilder.Redirect.DISCARD)
-                    .redirectError(ProcessBuilder.Redirect.DISCARD)
-                    .start();
-            } catch (IOException ignored) {} // No browser available — just show the dialog
-        }
-    }
-
-    // ══════════════════════════════════════════════════════════════════════════
-    // UI UTILITY HELPERS
+    // UI UTILITY HELPERS — used by multiple UI files
     // ══════════════════════════════════════════════════════════════════════════
 
     /**
      * Create a styled flat button matching the BloxBox dark theme.
-     * Mirrors the common tk.Button(..., relief="flat", cursor="hand2") pattern.
+     * Hover darkens the background — mirrors Python activebackground.
+     * All buttons in the app go through this factory for visual consistency.
      */
-    static JButton makeButton(String text, Color bg) {
-        JButton btn = new JButton(text);
+    public static javax.swing.JButton makeButton(String text, Color bg) {
+        javax.swing.JButton btn = new javax.swing.JButton(text);
         btn.setFont(FONT_BTN);
         btn.setBackground(bg);
         btn.setForeground(Color.WHITE);
         btn.setFocusPainted(false);
         btn.setBorderPainted(false);
         btn.setOpaque(true);
-        btn.setBorder(BorderFactory.createEmptyBorder(6, 14, 6, 14));
-        btn.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
+        btn.setBorder(javax.swing.BorderFactory.createEmptyBorder(6, 14, 6, 14));
+        btn.setCursor(java.awt.Cursor.getPredefinedCursor(java.awt.Cursor.HAND_CURSOR));
 
-        // Darken on hover — mirrors Python activebackground
-        Color hover = bg.darker();
-        btn.addMouseListener(new MouseAdapter() {
-            @Override public void mouseEntered(MouseEvent e) { if (btn.isEnabled()) btn.setBackground(hover); }
-            @Override public void mouseExited (MouseEvent e) { if (btn.isEnabled()) btn.setBackground(bg);    }
+        // Darken on hover, restore on exit
+        Color hoverBg = bg.darker();
+        btn.addMouseListener(new java.awt.event.MouseAdapter() {
+            @Override public void mouseEntered(java.awt.event.MouseEvent e) { if (btn.isEnabled()) btn.setBackground(hoverBg); }
+            @Override public void mouseExited (java.awt.event.MouseEvent e) { if (btn.isEnabled()) btn.setBackground(bg);      }
         });
-
         return btn;
     }
 }
